# allelio

./: .gitignore  CHANGELOG.md  LANDING_PAGE.md  LICENSE  Publishing_Allelio_on_GitHub.docx  README.md  RELEASE_NOTES.md  ROADMAP.md  allelio_report.html  paper_outline.md  pyproject.toml
allelio/: __init__.py  cli.py  report.py
allelio/ai/: __init__.py  engine.py  explanations.py  prompts.py  safety.py
allelio/analysis/: __init__.py  lookup.py
allelio/database/: __init__.py  clinvar.py  downloader.py  gwas.py  store.py
allelio/parsers/: __init__.py  ancestry.py  base.py  twentythree.py  vcf_parser.py
allelio/web/: __init__.py  app.py  routes.py
docs/: Allelio_Disclaimers.docx  Allelio_How_It_Works_Guide.docx  Allelio_Presentation.pptx  Allelio_Project_Brief.docx  Allelio_User_Guide.docx  FILE_MANIFEST.txt  create_disclaimers.js  create_user_guide.js  landing_page.html
docs/blog/: 01-what-is-clinvar.md  02-what-is-raw-genome-data.md  03-what-is-gwas-catalog.md  04-how-snpeek-parses-your-dna-file.md  05-why-genetic-data-is-sensitive.md  06-what-is-a-snp.md  06b-pharmacogenomics-how-genes-affect-medications.md  07-what-is-ollama-local-ai.md  08-understanding-pathogenic-vs-benign.md  09-brca-apoe-what-high-impact-genes-mean.md  10-how-to-talk-to-your-doctor-about-dna-results.md  11-what-is-a-genotype.md  12-what-is-a-reference-genome.md  13-what-does-clinical-significance-mean.md  14-what-is-penetrance.md  15-carrier-status-explained.md  16-what-is-linkage-disequilibrium.md  17-ancestry-vs-health-in-dna.md  18-what-is-a-p-value.md  19-what-is-an-odds-ratio.md  (+21 more)
tests/: conftest.py  test_analysis.py  test_database.py  test_parsers.py
(+1 files in other folders)
